--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "npx sequelize-cli db:migrate",
     "dev": "nodemon app.js"
   },
   "author": "Augustine Smith <augustine.smith@amalitech.org>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "sequelize": "^6.8.0"
   }
