--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt-auth": "github:fl45hER/express-jwt-auth",
     "sequelize": "^6.8.0"
   }
 }
